--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,9 +8,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.seecondev.seecon.MainActivity" >
 
-    <TextView
+    <Button
+        android:id="@+id/button_share_my_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/button_emergency"
+        android:onClick="shareMyLocation"
+        android:text="@string/share_my_location"
+        android:typeface="sans" />
+
+     <Button
+         android:id="@+id/button_emergency"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignBaseline="@+id/button_share_my_location"
+         android:layout_alignBottom="@+id/button_share_my_location"
+         android:layout_alignParentRight="true"
+         android:onClick="shareMyLocation"
+         android:text="!"
+         android:typeface="sans" />
 
 </RelativeLayout>
