--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -8,5 +8,13 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_help"
+        android:title="Help"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_about"
+        android:title="About"
+        app:showAsAction="never"/>
 
 </menu>
