--- a/res/layout/about_dialog.xml
+++ b/res/layout/about_dialog.xml
@@ -4,11 +4,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-
-    <TextView
-        android:id="@+id/textView1"
+    
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:src="@drawable/seecon_icon" 
+        android:layout_gravity="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text1"
+        android:text="Temp"
+        android:textStyle="bold"
+        android:textColor="#ff00ff"
+        android:background="#00ff00"
+        android:textColorHighlight="#000000"
+        android:textIsSelectable="true" />
+
 
 </LinearLayout>
