--- a/res/layout/about_dialog.xml
+++ b/res/layout/about_dialog.xml
@@ -4,24 +4,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    
-    <ImageView
+	<TextView
+	    android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="seecon"
+        android:textSize="30sp"
+        android:layout_gravity="center"/>
+	<TextView
+	    android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="the signal beacon\ndeveloped by Jeffrey Li, Jared Hettinger, and Katie Ensign"
+        android:textSize="25sp"
+        android:gravity="center"/>
+	
+	<ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/seecon_icon" 
         android:layout_gravity="center"/>
-
-    <TextView
-        android:layout_width="wrap_content"
+	
+	<TextView
+	    android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/text1"
-        android:text="Temp"
-        android:textStyle="bold"
-        android:textColor="#ff00ff"
-        android:background="#00ff00"
-        android:textColorHighlight="#000000"
-        android:textIsSelectable="true" />
-
+        android:text="An app that simplifies location sharing with friends, family, and emergency personnel\n"
+        android:textSize="20sp"
+        android:gravity="center"/>
 
 </LinearLayout>
