--- a/res/layout/about_dialog.xml
+++ b/res/layout/about_dialog.xml
@@ -21,7 +21,7 @@
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/seecon_icon" 
+        android:src="@drawable/seecon_icon3" 
         android:layout_gravity="center"/>
 	
 	<TextView
