--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
          android:layout_alignBaseline="@+id/button_share_my_location"
          android:layout_alignBottom="@+id/button_share_my_location"
          android:layout_alignParentRight="true"
-         android:onClick="shareMyLocation"
+         android:onClick="getEmergency"
          android:text="!"
          android:typeface="sans" />
 
