--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -10,11 +10,18 @@
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.
         -->
+        <item name="android:textColor">#00E2FF</item>
     </style>
+    
+    <style name="EditTextStyle" parent="@android:style/Widget.EditText">
+    	<item name="android:textColor">#00E2FF</item>
+	</style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    	<item name="android:windowBackground">@color/black</item>
+    	<item name="android:editTextStyle">@style/EditTextStyle</item>
     </style>
 
 </resources>
