WORKING MAP. YAY

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -29,5 +29,11 @@
          android:onClick="getEmergency"
          android:text="!"
          android:typeface="sans" />
+     
+     <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
