changed the style/theme of the app, fixed the menu so that map and buttons fit together

--- a/res/layout/about_dialog.xml
+++ b/res/layout/about_dialog.xml
@@ -2,26 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@color/black">
 
 	<TextView
 	    android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="seecon"
         android:textSize="30sp"
+        android:textColor="@color/cyan"
         android:layout_gravity="center"/>
 	<TextView
 	    android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="the signal beacon\ndeveloped by Jeffrey Li, Jared Hettinger, and Katie Ensign"
         android:textSize="25sp"
+        android:textColor="@color/cyan"
         android:gravity="center"/>
 	
 	<ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/seecon_icon3" 
+        android:src="@drawable/seecon_icon" 
         android:layout_gravity="center"/>
 	
 	<TextView
@@ -29,6 +32,7 @@
         android:layout_height="wrap_content"
         android:text="An app that simplifies location sharing with friends, family, and emergency personnel\n"
         android:textSize="20sp"
+        android:textColor="@color/cyan"
         android:gravity="center"/>
 
 </LinearLayout>
