--- a/res/layout/help_dialog.xml
+++ b/res/layout/help_dialog.xml
@@ -2,19 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/black">
 
 	<TextView
 	    android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="help"
         android:textSize="30sp"
+        android:textColor="@color/cyan"
         android:layout_gravity="center"/>
       
     <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="20sp"
+       	android:textColor="@color/cyan"
         android:text="Select 'Share My Location' to send your location information to a friend.\n\nSelect the red button to send a distress message to emergency responders and emergency contacts.\n\nYou can add contacts to your emergency list via the app settings.\n"
        	android:textIsSelectable="true" />
     
