--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -12,7 +12,9 @@
     <item name="darkorange" type="color">#FFFF8800</item>
     <item name="darkred" type="color">#FFCC0000</item>
     <item name="black" type="color">#101517</item>
-    <item name="cyan" type="color">#00E2FF</item>
+    <item name="cyan" type="color">#E600E2FF</item>
+    <item name="white_opaque" type="color">#FFFFFFFF</item>
+    <item name="pitch_black" type="color">#FF000000</item>
  
     <integer-array name="androidcolors">
         <item>@color/blue</item>
@@ -27,6 +29,31 @@
         <item>@color/darkred</item>
         <item>@color/black</item>
         <item>@color/cyan</item>
+        <item>@color/white_opaque</item>
+        <item>@color/pitch_black</item>
     </integer-array>
+    
+    <!-- Opaque Color Code:
+	100% — FF
+	95% — F2
+	90% — E6
+	85% — D9
+	80% — CC
+	75% — BF
+	70% — B3
+	65% — A6
+	60% — 99
+	55% — 8C
+	50% — 80
+	45% — 73
+	40% — 66
+	35% — 59
+	30% — 4D
+	25% — 40
+	20% — 33
+	15% — 26
+	10% — 1A
+	5% — 0D
+	0% — 00-->
  
 </resources> 
