--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,10 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    
     tools:context="com.seecondev.seecon.MainActivity" >
 
     <Button
@@ -29,11 +26,14 @@
          android:onClick="getEmergency"
          android:text="!"
          android:typeface="sans" />
-     
+
      <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+         android:id="@+id/map"
+         android:name="com.google.android.gms.maps.MapFragment"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:layout_above="@+id/button_share_my_location"
+         android:layout_alignParentRight="true"
+         android:layout_alignParentTop="true" />
 
 </RelativeLayout>
