--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,14 +26,27 @@
          android:onClick="getEmergency"
          android:text="!"
          android:typeface="sans" />
+     <TextView
+         android:id="@+id/text_view_title"
+         android:layout_width="wrap_content"
+         android:layout_height="90dp"
+         android:layout_above="@+id/button_share_my_location"
+         android:layout_alignParentLeft="true"
+         android:layout_alignParentRight="true"
+         android:layout_marginTop="3dp"
+         android:textColor="@color/cyan"
+         android:textSize="18sp"
+         android:gravity="center"/>
 
      <fragment
          android:id="@+id/map"
          android:name="com.google.android.gms.maps.MapFragment"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
-         android:layout_above="@+id/button_share_my_location"
+         android:layout_above="@+id/text_view_title"
          android:layout_alignParentRight="true"
          android:layout_alignParentTop="true" />
+
+     
 
 </RelativeLayout>
