added new UI changes, cleaned up onCreate for MainActivity and SharedMyLocation

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,40 +4,18 @@
     android:layout_height="match_parent"
     
     tools:context="com.seecondev.seecon.MainActivity" >
-
-    <Button
-        android:id="@+id/button_share_my_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/button_emergency"
-        android:onClick="shareMyLocation"
-        android:text="@string/share_my_location"
-        android:typeface="sans" />
-
-     <Button
-         android:id="@+id/button_emergency"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_alignBaseline="@+id/button_share_my_location"
-         android:layout_alignBottom="@+id/button_share_my_location"
-         android:layout_alignParentRight="true"
-         android:onClick="getEmergency"
-         android:text="!"
-         android:typeface="sans" />
      
      <TextView
          android:id="@+id/text_view_title"
          android:layout_width="wrap_content"
          android:layout_height="90dp"
-         android:layout_above="@+id/button_share_my_location"
+         android:layout_above="@+id/button_emergency"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_marginTop="3dp"
+         android:gravity="center"
          android:textColor="@color/cyan"
-         android:textSize="18sp"
-         android:gravity="center"/>
+         android:textSize="19sp" />
 
      <fragment
          android:id="@+id/map"
@@ -48,6 +26,29 @@
          android:layout_alignParentRight="true"
          android:layout_alignParentTop="true" />
 
-     
+     <Button
+         android:id="@+id/button_emergency"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_alignParentRight="true"
+         android:onClick="getEmergency"
+         android:text="!"
+         android:typeface="sans" />
+
+     <Button
+         android:id="@+id/button_share_my_location"
+         android:layout_width="150dp"
+         android:layout_height="40dp"
+         android:layout_alignBaseline="@+id/button_emergency"
+         android:layout_alignBottom="@+id/button_emergency"
+         android:layout_alignParentLeft="true"
+         android:layout_toLeftOf="@+id/button_emergency"
+         android:layout_marginLeft="5dp"
+         android:layout_marginRight="2dp"
+         android:background="@drawable/button_default_style"
+         android:onClick="shareMyLocation"
+         android:text="@string/share_my_location"
+         android:typeface="sans" />
 
 </RelativeLayout>
