--- a/res/drawable/button_default_style.xml
+++ b/res/drawable/button_default_style.xml
@@ -3,10 +3,10 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#EE449def" />
+                android:color="#EE696969" />
             <stroke
                 android:width="1dp"
-                android:color="#2f6699" />
+                android:color="#474747" />
             <corners
         		android:bottomRightRadius="8dip"
         		android:bottomLeftRadius="8dip"  
@@ -18,12 +18,12 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#DE449def"
-                android:endColor="#DE2f6699"
+                android:startColor="#DE696969"
+                android:endColor="#DE474747"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#2f6699" />
+                android:color="#474747" />
             <size 
 				android:width="150dp"
 				android:height="30dp"
