--- a/res/drawable/button_emergency.xml
+++ b/res/drawable/button_emergency.xml
@@ -3,10 +3,10 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#EE449def" />
+                android:color="#EEC80000" />
             <stroke
                 android:width="1dp"
-                android:color="#2f6699" />
+                android:color="#980000" />
             <corners
         		android:bottomRightRadius="8dip"
         		android:bottomLeftRadius="8dip"  
@@ -18,15 +18,15 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#DE449def"
-                android:endColor="#DE2f6699"
+                android:startColor="#DEC80000"
+                android:endColor="#DE980000"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#2f6699" />
+                android:color="#980000" />
             <size 
-				android:width="150dp"
-				android:height="30dp"
+				android:width="40dp"
+				android:height="40dp"
                 />
             <corners
                 android:bottomRightRadius="8dip"
