--- a/res/drawable/button_send.xml
+++ b/res/drawable/button_send.xml
@@ -3,36 +3,26 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#EE449def" />
+                android:color="#EE00e2ff" />
             <stroke
                 android:width="1dp"
-                android:color="#2f6699" />
-            <corners
-        		android:bottomRightRadius="8dip"
-        		android:bottomLeftRadius="8dip"  
-   				android:topRightRadius="8dip"
-        		android:topLeftRadius="8dip" />
+                android:color="#00b4cc" />
 
         </shape>
     </item>
     <item>
         <shape>
             <gradient
-                android:startColor="#DE449def"
-                android:endColor="#DE2f6699"
+                android:startColor="#DE00e2ff"
+                android:endColor="#DE00b4cc"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#2f6699" />
+                android:color="#00b4cc" />
             <size 
 				android:width="150dp"
 				android:height="30dp"
                 />
-            <corners
-                android:bottomRightRadius="8dip"
-        		android:bottomLeftRadius="8dip"  
-   				android:topRightRadius="8dip"
-        		android:topLeftRadius="8dip" />
 
         </shape>
     </item>
