--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,10 +9,10 @@
          android:id="@+id/text_view_title"
          android:layout_width="wrap_content"
          android:layout_height="90dp"
-         android:layout_above="@+id/button_emergency"
+         android:layout_above="@+id/button_share_my_location"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
-         android:layout_marginTop="3dp"
+         android:background="@drawable/text_border"
          android:gravity="center"
          android:textColor="@color/cyan"
          android:textSize="19sp" />
@@ -28,12 +28,15 @@
 
      <Button
          android:id="@+id/button_emergency"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="55dp"
+         android:layout_height="40dp"
          android:layout_alignParentBottom="true"
          android:layout_alignParentRight="true"
+         android:layout_marginRight="5dp"
+         android:layout_marginLeft="2.5dp"
          android:onClick="getEmergency"
          android:text="!"
+         android:background="@drawable/button_emergency"
          android:typeface="sans" />
 
      <Button
@@ -45,7 +48,8 @@
          android:layout_alignParentLeft="true"
          android:layout_toLeftOf="@+id/button_emergency"
          android:layout_marginLeft="5dp"
-         android:layout_marginRight="2dp"
+         android:layout_marginRight="2.5dp"
+         android:layout_marginTop="2.5dp"
          android:background="@drawable/button_default_style"
          android:onClick="shareMyLocation"
          android:text="@string/share_my_location"
