--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -15,7 +15,9 @@
         android:layout_marginBottom="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/button_send"
+        android:onClick="sendMessage"
         android:text="Send" />
 
     <EditText
