--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -5,7 +5,7 @@
     tools:context="com.seecondev.seecon.Emergency" >
 
     <Button
-        android:id="@+id/buttonSend"
+        android:id="@+id/buttonSendEmergency"
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_alignParentBottom="true"
@@ -49,7 +49,7 @@
         android:background="@drawable/text_border"/>
     
     <EditText
-        android:id="@+id/editMessage"
+        android:id="@+id/editMessageToEmergency"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/buttonSend"
