Issue 17: Changed layout of main menu

--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -79,6 +79,7 @@
         android:hint=" Additional message"
         android:inputType="textMultiLine"
         android:scrollbars="vertical"
+        android:gravity="top|left"
         android:textSize="22sp" >
 
         <requestFocus />
