--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -33,6 +33,7 @@
         android:layout_alignBaseline="@+id/chkEmergencyContacts"
         android:layout_alignBottom="@+id/chkEmergencyContacts"
         android:layout_alignLeft="@+id/buttonSend"
+        android:layout_marginLeft="5dp"
         android:text="Include emergency contacts"
         android:textColor="@color/cyan"
         android:textSize="22sp" />
@@ -41,25 +42,29 @@
         android:id="@+id/spinnerEmergencyDialogs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignLeft="@+id/textViewEmergencyContacts"
+        android:layout_alignRight="@+id/buttonSendEmergency"
         android:layout_below="@+id/chkEmergencyContacts"
+        android:background="@drawable/text_border"
         android:entries="@array/emergency_dialogs"
         android:prompt="@string/dialog_prompt"
-        android:spinnerMode="dialog"
-        android:background="@drawable/text_border"/>
+        android:spinnerMode="dialog" />
     
     <EditText
         android:id="@+id/editMessageToEmergency"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/buttonSendEmergency"
-        android:layout_alignParentLeft="true"
+        android:layout_alignLeft="@+id/spinnerEmergencyDialogs"
+        android:layout_alignRight="@+id/spinnerEmergencyDialogs"
         android:layout_below="@+id/spinnerEmergencyDialogs"
         android:background="@drawable/text_border"
+        android:layout_marginTop="5dp"
         android:ems="20"
-        android:hint="Enter a message"
+        android:hint=" Enter a message"
         android:inputType="textMultiLine"
         android:scrollbars="vertical"
+        android:gravity="top|left"
         android:textSize="22sp" >
 
         <requestFocus />
