--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:background="@drawable/text_border"
-         android:gravity="center"
+         android:gravity="left"
          android:textColor="@color/cyan"
          android:textSize="19sp" />
 
