--- a/res/xml/pref_general.xml
+++ b/res/xml/pref_general.xml
@@ -1,5 +1,6 @@
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
-
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:key="preference_general">
+	
     <CheckBoxPreference
         android:defaultValue="true"
         android:key="example_checkbox"
