--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -70,19 +70,31 @@
         android:id="@+id/editMessage"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonSend"
+        android:layout_above="@+id/textCharactersUsed"
         android:layout_alignLeft="@+id/editCompleteMessage"
         android:layout_alignRight="@+id/editCompleteMessage"
         android:layout_below="@+id/editCompleteMessage"
         android:background="@drawable/text_border"
         android:ems="20"
+        android:gravity="top|left"
         android:hint=" Enter additional message"
         android:inputType="textMultiLine"
         android:scrollbars="vertical"
-        android:gravity="top|left"
         android:textSize="22sp" >
 
         <requestFocus />
     </EditText>
+
+    <TextView
+        android:id="@+id/textCharactersUsed"
+        android:layout_width="250dp"
+        android:layout_height="20dp"
+        android:layout_above="@+id/buttonSend"
+        android:layout_alignLeft="@+id/buttonSend"
+        android:layout_alignRight="@+id/buttonSend"
+        android:ems="20"
+        android:inputType="textMultiLine"
+        android:maxHeight="20dp"
+        android:textSize="16sp" />
 
 </RelativeLayout>
