--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -54,20 +54,32 @@
         android:id="@+id/editMessageToEmergency"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonSendEmergency"
+        android:layout_above="@+id/textCharactersUsedEmergency"
         android:layout_alignLeft="@+id/spinnerEmergencyDialogs"
         android:layout_alignRight="@+id/spinnerEmergencyDialogs"
         android:layout_below="@+id/spinnerEmergencyDialogs"
-        android:background="@drawable/text_border"
         android:layout_marginTop="5dp"
+        android:background="@drawable/text_border"
         android:ems="20"
+        android:gravity="top|left"
         android:hint=" Enter additional message"
         android:inputType="textMultiLine"
         android:scrollbars="vertical"
-        android:gravity="top|left"
         android:textSize="22sp" >
 
         <requestFocus />
     </EditText>
+
+    <TextView
+        android:id="@+id/textCharactersUsedEmergency"
+        android:layout_width="250dp"
+        android:layout_height="20dp"
+        android:layout_above="@+id/buttonSendEmergency"
+        android:layout_alignLeft="@+id/buttonSendEmergency"
+        android:layout_alignRight="@+id/buttonSendEmergency"
+        android:ems="20"
+        android:inputType="textMultiLine"
+        android:maxHeight="20dp"
+        android:textSize="16sp" />
 
 </RelativeLayout>
