--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -37,18 +37,6 @@
         android:text="Include emergency contacts"
         android:textColor="@color/cyan"
         android:textSize="22sp" />
-
-    <Spinner
-        android:id="@+id/spinnerEmergencyDialogs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textViewEmergencyContacts"
-        android:layout_alignRight="@+id/buttonSendEmergency"
-        android:layout_below="@+id/chkEmergencyContacts"
-        android:background="@drawable/text_border"
-        android:entries="@array/emergency_dialogs"
-        android:prompt="@string/dialog_prompt"
-        android:spinnerMode="dialog" />
     
     <EditText
         android:id="@+id/editMessageToEmergency"
@@ -58,7 +46,6 @@
         android:layout_alignLeft="@+id/spinnerEmergencyDialogs"
         android:layout_alignRight="@+id/spinnerEmergencyDialogs"
         android:layout_below="@+id/spinnerEmergencyDialogs"
-        android:layout_marginTop="5dp"
         android:background="@drawable/text_border"
         android:ems="20"
         android:gravity="top|left"
@@ -81,5 +68,32 @@
         android:inputType="textMultiLine"
         android:maxHeight="20dp"
         android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/editEmergencyAddress"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_alignLeft="@+id/textViewEmergencyContacts"
+        android:layout_alignRight="@+id/textCharactersUsedEmergency"
+        android:layout_below="@+id/textViewEmergencyContacts"
+        android:ems="20"
+        android:hint="Complete Message"
+        android:inputType="textMultiLine"
+        android:maxHeight="140dp"
+        android:scrollbars="vertical"
+        android:textSize="22sp" />
+
+    <Spinner
+        android:id="@+id/spinnerEmergencyDialogs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editEmergencyAddress"
+        android:layout_alignRight="@+id/editEmergencyAddress"
+        android:layout_below="@+id/editEmergencyAddress"
+        android:layout_marginBottom="2.5dp"
+        android:background="@drawable/text_border"
+        android:entries="@array/emergency_dialogs"
+        android:prompt="@string/dialog_prompt"
+        android:spinnerMode="dialog" />
 
 </RelativeLayout>
