--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -77,7 +77,7 @@
         android:layout_alignRight="@+id/textCharactersUsedEmergency"
         android:layout_below="@+id/textViewEmergencyContacts"
         android:ems="20"
-        android:hint="Complete Message"
+        android:hint="Current location: "
         android:inputType="textMultiLine"
         android:maxHeight="140dp"
         android:scrollbars="vertical"
