--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,6 +14,10 @@
          android:layout_alignParentRight="true"
          android:background="@drawable/text_border"
          android:gravity="left"
+         android:paddingLeft="8dp"
+         android:paddingRight="8dp"
+         android:paddingTop="4dp"
+         android:paddingBottom="4dp"
          android:scrollbars = "vertical"
          android:textColor="@color/cyan"
          android:textSize="19sp" />
