--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -6,14 +6,28 @@
         android:key="sound"
         android:summary="Turn the sound on or off"
         android:title="Sound" />
-    <!--
+    
+    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. 
     <ListPreference
-        android:defaultValue="@string/difficulty_expert"
-        android:entries="@array/list_difficulty_level"
-        android:entryValues="@array/list_difficulty_level"
-        android:key="difficulty_level"
-        android:summary=""
-        android:title="Difficulty level" />
+        android:defaultValue="-1"
+        android:entries="@array/pref_example_list_titles"
+        android:entryValues="@array/pref_example_list_values"
+        android:key="example_list"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null"
+        android:title="@string/edit_emergency_contacts" />
     -->
+
+    <MultiSelectListPreference
+        android:dialogTitle="@string/edit_emergency_contacts"
+        android:key="mode_repeat"
+        android:summary="" 
+        android:title="@string/edit_emergency_contacts"
+        android:entries="@array/emergency_contacts"
+        android:entryValues="@array/emergency_contacts_values"
+        android:defaultValue="@array/empty_array"
+        
+    />
+    
 
 </PreferenceScreen>
