made changes to layout because Katie wants it

--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -34,6 +34,10 @@
         android:layout_alignBottom="@+id/chkEmergencyContacts"
         android:layout_alignLeft="@+id/buttonSend"
         android:layout_marginLeft="5dp"
+        android:paddingLeft="4.5dp"
+        android:paddingRight="4.5dp"
+        android:paddingTop="4.5dp"
+        android:paddingBottom="4.5dp"
         android:text="Include emergency contacts"
         android:textColor="@color/cyan"
         android:textSize="22sp" />
@@ -47,9 +51,13 @@
         android:layout_alignRight="@+id/spinnerEmergencyDialogs"
         android:layout_below="@+id/spinnerEmergencyDialogs"
         android:background="@drawable/text_border"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:ems="20"
         android:gravity="top|left"
-        android:hint=" Enter additional message"
+        android:hint="Enter additional message"
         android:inputType="textMultiLine"
         android:scrollbars="vertical"
         android:textSize="22sp" >
@@ -77,6 +85,10 @@
         android:layout_alignRight="@+id/textCharactersUsedEmergency"
         android:layout_below="@+id/textViewEmergencyContacts"
         android:ems="20"
+        android:paddingLeft="4.5dp"
+        android:paddingRight="4.5dp"
+        android:paddingTop="4.5dp"
+        android:paddingBottom="4.5dp"
         android:hint="Current location: "
         android:inputType="textMultiLine"
         android:maxHeight="140dp"
