--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -27,6 +27,10 @@
         android:layout_alignLeft="@+id/editPhoneNumber"
         android:layout_alignRight="@+id/buttonContacts"
         android:layout_below="@+id/buttonContacts"
+        android:paddingLeft="4.5dp"
+        android:paddingRight="4.5dp"
+        android:paddingTop="4.5dp"
+        android:paddingBottom="4.5dp"
         android:ems="20"
         android:hint="Complete Message"
         android:inputType="textMultiLine"
@@ -74,10 +78,14 @@
         android:layout_alignLeft="@+id/editCompleteMessage"
         android:layout_alignRight="@+id/editCompleteMessage"
         android:layout_below="@+id/editCompleteMessage"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:background="@drawable/text_border"
         android:ems="20"
         android:gravity="top|left"
-        android:hint=" Enter additional message"
+        android:hint="Enter additional message"
         android:inputType="textMultiLine"
         android:scrollbars="vertical"
         android:textSize="22sp" >
